@@ -72,11 +72,11 @@ public class RMWebAppFilter extends GuiceContainer {
 
       if (redirectPath != null && !redirectPath.isEmpty()) {
         String redirectMsg =
-            "This is standby RM. Redirecting to the current active RM: "
-                + redirectPath;
-        response.addHeader("Refresh", "3; url=" + redirectPath);
+            "This is standby RM. The redirect url is: " + redirectPath;
         PrintWriter out = response.getWriter();
         out.println(redirectMsg);
+        response.setHeader("Location", redirectPath);
+        response.setStatus(HttpServletResponse.SC_TEMPORARY_REDIRECT);
         return;
       }
     }
