@@ -333,6 +333,9 @@ Release 2.7.1 - UNRELEASED
     YARN-3497. ContainerManagementProtocolProxy modifies IPC timeout conf
     without making a copy. (Jason Lowe via jianhe)
 
+    YARN-2605. [RM HA] Rest api endpoints doing redirect incorrectly.
+    (Xuan Gong via stevel)
+
 Release 2.7.0 - 2015-04-20
 
   INCOMPATIBLE CHANGES
